tests/snapshots/snapshots__pipeline@param_eff_mismatch.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/param_eff_mismatch.pr
---
== tokens ==
VOpen Effect UIdent("Emit") LParen Ident("a") RParen VOpen Ident("emit") LParen Ident("a") RParen Colon KwUnit VClose VSemi Fn Ident("ints") LParen RParen Colon KwUnit Bang LBrace UIdent("Emit") LParen KwInt RParen RBrace Eq Ident("emit") LParen Int(IntLit { value: 1, suffix: None }) RParen VSemi Fn Ident("strs") LParen RParen Colon KwUnit Bang LBrace UIdent("Emit") LParen KwString RParen RBrace Eq Ident("emit") LParen StringLit("x") RParen VSemi Fn Ident("both") LParen RParen Colon KwUnit Bang LBrace UIdent("Emit") LParen KwInt RParen RBrace Eq VOpen Ident("ints") LParen RParen VSemi Ident("strs") LParen RParen VClose VSemi Fn Ident("main") LParen RParen Eq LParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Emit",
            params: [
                "a",
            ],
            ops: [
                EffOp {
                    name: "emit",
                    params: [
                        Var(
                            "a",
                        ),
                    ],
                    ret: Unit,
                    grade: Many,
                },
            ],
            span: 0..31,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "ints",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Int,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "emit",
                        ),
                        span: 66..70,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 71..72,
                        },
                    ],
                ),
                span: 66..73,
            },
            wheres: [],
            span: 33..73,
        },
        Decl {
            name: "strs",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Str,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "emit",
                        ),
                        span: 111..115,
                    },
                    [
                        Spanned {
                            node: Str(
                                "x",
                            ),
                            span: 116..119,
                        },
                    ],
                ),
                span: 111..120,
            },
            wheres: [],
            span: 75..120,
        },
        Decl {
            name: "both",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Int,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Let(
                    "_",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "ints",
                                ),
                                span: 157..161,
                            },
                            [],
                        ),
                        span: 157..163,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "strs",
                                ),
                                span: 166..170,
                            },
                            [],
                        ),
                        span: 166..172,
                    },
                ),
                span: 157..172,
            },
            wheres: [],
            span: 122..172,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Unit,
                span: 186..188,
            },
            wheres: [],
            span: 174..188,
        },
    ],
}

== types ==
[E5006] Type Error: in `both`: effect instantiation mismatch: `Emit(String)` is not compatible with `Emit(Int)`
    ╭─[ <source>:10:3 ]
    │
 10 │   strs()
    │   ───┬──  
    │      ╰──── in `both`: effect instantiation mismatch: `Emit(String)` is not compatible with `Emit(Int)`
────╯
